fixed .productHeader that was overlapping on open img carousel of productView.jsx when it was open in desktop

--- a/cra-frontend/src/productView.css
+++ b/cra-frontend/src/productView.css
@@ -13,7 +13,7 @@
   align-items: center;
   position: sticky;
   top: 102px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .productHeader .icon {
